--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@woohm402/eslint-config-react": "0.6.4",
     "eslint": "9.11.0",
     "knip": "5.30.5",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "typescript": "5.6.2",
     "vite": "5.4.7"
   },
